// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectField /> #render() still matches snapshot 1`] = `
<WithStyles(TextField)
  SelectProps={
    Object {
      "displayEmpty": true,
    }
  }
  select={true}
>
  <WithStyles(ForwardRef(MenuItem))
    key="1"
    value="1"
  >
    One
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    key="2"
    value="2"
  >
    Two
  </WithStyles(ForwardRef(MenuItem))>
</WithStyles(TextField)>
`;

exports[`<SelectField /> #render() still matches snapshot if not native 1`] = `
<WithStyles(TextField)
  SelectProps={
    Object {
      "native": false,
    }
  }
  select={true}
>
  <WithStyles(ForwardRef(MenuItem))
    key="1"
    value="1"
  >
    One
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    key="2"
    value="2"
  >
    Two
  </WithStyles(ForwardRef(MenuItem))>
</WithStyles(TextField)>
`;

exports[`<SelectField /> #renderOptions() still matches snapshot if native 1`] = `
<WithStyles(TextField)
  SelectProps={
    Object {
      "native": true,
    }
  }
  select={true}
>
  <option
    key="1"
    value="1"
  >
    One
  </option>
  <option
    key="2"
    value="2"
  >
    Two
  </option>
</WithStyles(TextField)>
`;
